Fix for flipping card cutoff

--- a/static/scss/courses/home-menu.scss
+++ b/static/scss/courses/home-menu.scss
@@ -5,6 +5,7 @@
 
   .rotator {
     overflow: hidden;
+    padding: 10px 0;
 
     ul {
       white-space: nowrap;
